# simple-bet

./: .gitignore  README.md
contract/: Cargo.toml  build.sh
contract/res/: simple_bet.wasm  simple_bet_v00.wasm
contract/src/: lib.rs  migrate.rs  test_utils.rs  types.rs
