[package]
name = "simple-bet"
version = "1.0.0"
authors = ["Yacare <yacare.near>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
serde = "1"
serde_json = "1.0.108"
uint = { version = "0.9.3", default-features = false }

[dev-dependencies]
near-workspaces = "0.9.0"
tokio = "1.28.0"
anyhow = "1.0.75"
near-gas = "0.2.5"
ctor = "0.2.5"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
